# django-sql-utils

./: .travis.yml  Readme.rst  pyproject.toml  runtests.py  setup.py
.github/workflows/: mysql_test.yml  postgres_test.yml  sqlite_test.yml
sql_util/: aggregates.py  apps.py  debug.py  fields.py  test.py  utils.py
sql_util/tests/: models.py  test.py  test_exists.py  test_mysql_settings.py  test_postgres_settings.py  test_sqlite_settings.py  test_subquery.py
